--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -2,27 +2,27 @@
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP", "BCISelfInteract"],
   "Enabled"   : ["Seq"],
   //"Default"   : "Body6d",
-  "Timestep" : 0.002,
+  "Timestep" : 0.005,
   "Seq" : {
-    //"Env" : {
-    //  "Path" : "/home/gergondet/devel-src/catkin_ws/mc_ws/src/hrp2_drc/hrp2_drc_description",
-    //  "Name" : "drc_stairs2"
-    //},
-    //"Plan" : "drc_stairs_climbing.json",
+    "Env" : {
+      "Path" : "/home/gergondet/devel-src/catkin_ws/mc_ws/src/hrp2_drc/hrp2_drc_description",
+      "Name" : "drc_stairs2"
+    },
+    "Plan" : "drc_stairs_climbing.json",
     //"Env" : {
     //  "Name" : "jvrc_ladder"
     //},
     //"Plan" : "jvrc_ladder_climbing.json",
-    "Env" : {
-      "Name" : "irex_ladder"
-    },
-    "Plan" : "irex_ladder_climbing.json",
+    //"Env" : {
+    //  "Name" : "irex_ladder"
+    //},
+    //"Plan" : "irex_ladder_climbing.json",
     //"Env" : {
     //  "Module" : "Polaris"
     //},
     //"Plan" : "drc_car_egress.json",
-    "UseRealSensors" : 0,
+    "UseRealSensors" : 1,
     "StartStance" : 0,
-    "StepByStep"  : 0
+    "StepByStep"  : 1
   }
 }
