[Win32] Fixes compilation/loading issues on Win32

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,12 +17,9 @@ setup_project()
 
 add_definitions(-std=c++0x)
 add_definitions(-mfpmath=sse -msse2)
-#add_definitions(-pedantic -Wno-long-long -Wall -Wextra -Wcast-align -Wcast-qual -Wformat -Wwrite-strings)
-#add_definitions(-Wno-sign-conversion -Wno-shorten-64-to-32)
-#add_definitions(-Werror)
-#set(HRP2_DRC_DESCRIPTION_PATH "C:/Work/Code/Joris/hrp2_drc/hrp2_drc_description")
-#set(HRP4_DESCRIPTION_PATH "C:/Work/Code/Joris/hrp4/hrp4_description")
-#set(MC_ENV_DESCRIPTION_PATH "C:/Work/Code/Joris/mc_ros/mc_env_description")
+if(WIN32)
+add_definitions("-DNOMINMAX")
+endif()
 
 IF(NOT WIN32)
   SEARCH_FOR_EIGEN()
@@ -40,7 +37,7 @@ if(WIN32)
   set( ENV{PKG_CONFIG_PATH} "$ENV{PKG_CONFIG_PATH};${PKG_CONFIG_INCLUDE_DIR}" )
 ENDIF()
 
-find_package(Boost REQUIRED COMPONENTS system filesystem thread date_time)
+find_package(Boost REQUIRED COMPONENTS system filesystem thread date_time timer)
 
 add_required_dependency(jsoncpp)
 add_required_dependency(Tasks)
@@ -148,6 +145,9 @@ set(MC_CONTROLLER_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}/lib/mc_controller)
 configure_file(${PROJECT_SOURCE_DIR}/include/mc_rtc/config.h.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/include/mc_rtc/config.h)
 
 add_subdirectory(3rd-party)
+if(WIN32)
+  include_directories(3rd-party/ltdl)
+endif()
 add_subdirectory(src)
 add_subdirectory(tests)
 add_subdirectory(utils)
