--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
+link_directories(${Boost_LIBRARY_DIR_RELEASE})
+
 add_library(mc_rtc_loader SHARED mc_rtc/loader.cpp ../include/mc_rtc/loader.h ../include/mc_rtc/loader_api.h)
 set_target_properties(mc_rtc_loader PROPERTIES COMPILE_FLAGS "-DMC_RTC_LOADER_EXPORTS")
 target_link_libraries(mc_rtc_loader ${Boost_LIBRARIES} ltdl)
@@ -51,7 +53,9 @@ pkg_config_use_dependency(mc_rbdyn mc_rbdyn_urdf_cpp)
 pkg_config_use_dependency(mc_rbdyn Tasks)
 pkg_config_use_dependency(mc_rbdyn jsoncpp)
 target_link_libraries(mc_rbdyn ${Boost_LIBRARIES} ${GEOS_LIBRARY} mc_rtc_loader)
-pkg_config_append_libs(${Boost_LIBRARIES})
+if(NOT WIN32)
+  pkg_config_append_libs(${Boost_LIBRARIES})
+endif()
 pkg_config_append_libs(mc_rbdyn)
 pkg_config_append_libs(${GEOS_LIBRARY})
 
@@ -142,11 +146,15 @@ pkg_config_append_libs(mc_tasks)
 
 add_library(mc_rtc_ros SHARED mc_rtc/ros.cpp ../include/mc_rtc/ros.h ../include/mc_rtc/ros_api.h)
 set_target_properties(mc_rtc_ros PROPERTIES COMPILE_FLAGS "-DMC_RTC_ROS_EXPORTS")
+target_link_libraries(mc_rtc_ros mc_rbdyn)
 if(${ROSCPP_FOUND})
   pkg_config_use_dependency(mc_rtc_ros roscpp)
   pkg_config_use_dependency(mc_rtc_ros nav_msgs)
   pkg_config_use_dependency(mc_rtc_ros sensor_msgs)
   pkg_config_use_dependency(mc_rtc_ros tf2_ros)
+endif()
+if(${HRPSYS_BASE_FOUND})
+  pkg_config_use_dependency(mc_rtc_ros hrpsys-base)
 endif()
 pkg_config_append_libs(mc_rtc_ros)
 
@@ -190,8 +198,12 @@ pkg_config_append_libs(mc_control)
 macro(add_controller controller_name controller_SRC controller_HDR)
   add_library(${controller_name} SHARED ${controller_SRC} ${controller_HDR})
   set_target_properties(${controller_name} PROPERTIES COMPILE_FLAGS
-    "-DMC_ROBOTS_EXPORTS" PREFIX "")
+    "-DMC_CONTROL_EXPORTS" PREFIX "")
   target_link_libraries(${controller_name} mc_control)
+  pkg_config_use_dependency(${controller_name} mc_rbdyn_urdf_cpp)
+  pkg_config_use_dependency(${controller_name} Tasks)
+  pkg_config_use_dependency(${controller_name} jsoncpp)
+  target_link_libraries(${controller_name} ${Boost_LIBRARIES})
   install(TARGETS ${controller_name} DESTINATION
     ${MC_CONTROLLER_INSTALL_PREFIX})
 endmacro()
