--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 variables:
   CI_TOOL: gitlab-ci
-  APT_DEPENDENCIES: "libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev libsdl1.2-dev qhull-bin libqhull-dev libpcl-all libqt4-dev libqt4-opengl-dev libxmu-dev libltdl-dev"
-  GIT_DEPENDENCIES: "jorisv/SpaceVecAlg jorisv/RBDyn jorisv/eigen-qld git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/sch-core gergondet/Tasks git@gite.lirmm.fr:multi-contact/mc_rbdyn_urdf_cpp.git"
-  MASTER_PPA: "v-launchpad-jochen-sprickerhof-de/pcl"
+  APT_DEPENDENCIES: "libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev libsdl1.2-dev qhull-bin libqhull-dev libpcl-all libqt4-dev libqt4-opengl-dev libxmu-dev libltdl-dev libspacevecalg-dev librbdyn-dev libeigen-qld-dev"
+  GIT_DEPENDENCIES: "git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/sch-core jrl-umi3218/Tasks git@gite.lirmm.fr:multi-contact/mc_rbdyn_urdf_cpp.git"
+  MASTER_PPA: "v-launchpad-jochen-sprickerhof-de/pcl pierre-gergondet+ppa:multi-contact hrg/daily"
   ROS_DISTRO: "indigo"
 
 # Secured variable are stored in the project
@@ -14,18 +14,14 @@ variables:
 
 before_script:
   - git submodule update --quiet --init --recursive
-  - echo "deb http://openrtm.org/pub/Linux/ubuntu/ trusty main" > /etc/apt/sources.list.d/openrtm.list
   - echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
   - apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
-  - ./.jrl-ci/dependencies/pybindgen-0.16
   - ./.jrl-ci/dependencies/eigen-3.2
   - ./.jrl-ci/run before_install
 
 build_gcc_noros_nohrpsys:
   stage: build
   script:
-    - export CC=gcc
-    - export CXX=g++
     - ./.jrl-ci/run build
     - ./.jrl-ci/run after_success
   tags:
@@ -34,10 +30,10 @@ build_gcc_noros_nohrpsys:
 build_gcc_noros_hrpsys:
   stage: build
   script:
-    - apt-get install -qq --force-yes openrtm-aist-dev openrtm-aist-python
-    - export APT_DEPENDENCIES="openjdk-6-jdk openjdk-6-jre jython libreadline-java java-common ttf-kochi-gothic ttf-kochi-mincho gcc g++ make build-essential cmake cmake-qt-gui cmake-curses-gui doxygen graphviz pkg-config python-yaml libcos4-dev libomnievents-dev libomniorb4-1 libomniorb4-dev libomnithread3-dev libomnithread3c2 omnievents omniidl omniidl-python omniorb omniorb-idl omniorb-nameserver python-omniorb python-tk liblapack3gf liblapack-dev libatlas-base-dev libatlas-dev libblas3gf libblas-dev f2c libf2c2 libf2c2-dev libgfortran3 libgfortran3-dbg zlib1g-dev libpng12-dev uuid-dev collada-dom-dev libsdl2-dev libglew-dev freeglut3-dev libopencv-dev"; export GIT_DEPENDENCIES="fkanehiro/openhrp3 OctoMap/octomap fkanehiro/hrpsys-base"; ./.jrl-ci/run before_install
-    - export CC=gcc
-    - export CXX=g++
+    - export MASTER_PPA=""
+    - export APT_DEPENDENCIES="hrpsys-base"
+    - export GIT_DEPENDENCIES=""
+    - ./.jrl-ci/run before_install
     - ./.jrl-ci/run build
     - ./.jrl-ci/run after_success
   tags:
@@ -47,12 +43,11 @@ build_gcc_ros_nohrpsys:
   stage: build
   script:
     - ./.jrl-ci/dependencies/catkin
+    - export MASTER_PPA=""
     - export APT_DEPENDENCIES="ros-indigo-common-msgs ros-indigo-tf2-ros ros-indigo-xacro ros-indigo-rviz-animated-view-controller"
     - export GIT_DEPENDENCIES=""
     - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#master git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
     - ./.jrl-ci/run before_install
-    - export CC=gcc
-    - export CXX=g++
     - ./.jrl-ci/run build
     - ./.jrl-ci/run after_success
   tags:
@@ -62,13 +57,11 @@ build_gcc_ros_hrpsys:
   stage: build
   script:
     - ./.jrl-ci/dependencies/catkin
-    - apt-get install -qq --force-yes openrtm-aist-dev openrtm-aist-python
-    - export APT_DEPENDENCIES="openjdk-6-jdk openjdk-6-jre jython libreadline-java java-common ttf-kochi-gothic ttf-kochi-mincho gcc g++ make build-essential cmake cmake-qt-gui cmake-curses-gui doxygen graphviz pkg-config python-yaml libcos4-dev libomnievents-dev libomniorb4-1 libomniorb4-dev libomnithread3-dev libomnithread3c2 omnievents omniidl omniidl-python omniorb omniorb-idl omniorb-nameserver python-omniorb python-tk liblapack3gf liblapack-dev libatlas-base-dev libatlas-dev libblas3gf libblas-dev f2c libf2c2 libf2c2-dev libgfortran3 libgfortran3-dbg zlib1g-dev libpng12-dev uuid-dev collada-dom-dev libsdl2-dev libglew-dev freeglut3-dev libopencv-dev ros-indigo-common-msgs ros-indigo-tf2-ros ros-indigo-xacro ros-indigo-rviz-animated-view-controller"
-    - export GIT_DEPENDENCIES="fkanehiro/openhrp3 OctoMap/octomap fkanehiro/hrpsys-base"
+    - export MASTER_PPA=""
+    - export APT_DEPENDENCIES="ros-indigo-common-msgs ros-indigo-tf2-ros ros-indigo-xacro ros-indigo-rviz-animated-view-controller hrpsys-base"
+    - export GIT_DEPENDENCIES=""
     - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#master git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
     - ./.jrl-ci/run before_install
-    - export CC=gcc
-    - export CXX=g++
     - ./.jrl-ci/run build
     - ./.jrl-ci/run after_success
   tags:
