--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ variables:
   CI_TOOL: gitlab-ci
   APT_DEPENDENCIES: "libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev libsdl1.2-dev qhull-bin libqhull-dev libpcl-all libqt4-dev libqt4-opengl-dev libxmu-dev libltdl-dev libspacevecalg-dev librbdyn-dev libeigen-qld-dev"
   GIT_DEPENDENCIES: "git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/sch-core jrl-umi3218/Tasks git@gite.lirmm.fr:multi-contact/mc_rbdyn_urdf_cpp.git"
-  MASTER_PPA: "v-launchpad-jochen-sprickerhof-de/pcl pierre-gergondet+ppa:multi-contact hrg/daily"
+  MASTER_PPA: "v-launchpad-jochen-sprickerhof-de/pcl pierre-gergondet+ppa/multi-contact hrg/daily"
   ROS_DISTRO: "indigo"
 
 # Secured variable are stored in the project
