Add ROS service to TCP interface
* Mimic OpenRTM service

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,12 @@ else()
   set(DEFINE_HAS_ROS_MACRO "")
 endif()
 
+if(${TCP_COM_FOUND} AND ${TCP_CONTROL_FOUND} AND ${ROSCPP_FOUND})
+  add_required_dependency(mc_tcp_msgs)
+else()
+  set(MC_TCP_MSGS_FOUND 0)
+endif()
+
 option(CHOOSE_HRP4 "Use HRP4 as main robot instead of HRP2DRC" False)
 if(CHOOSE_HRP4)
   set(DEFINE_CHOOSE_HRP4 "#define CHOOSE_HRP4 1")
