--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -265,8 +265,13 @@ if(${HRPSYS_BASE_FOUND})
 endif()
 
 if(${TCP_COM_FOUND} AND ${TCP_CONTROL_FOUND})
-  set(MC_RTC_TCP_HEADERS mc_rtc-tcp/MCControlTCP.h mc_rtc-tcp/MCControlTCP.hxx)
+  set(MC_RTC_TCP_HEADERS mc_rtc-tcp/MCControlTCP.h mc_rtc-tcp/MCControlTCP.hxx mc_rtc-tcp/MCControlTCPService.h)
   set(MC_RTC_TCP_SRC mc_rtc-tcp/tcp_robot.cpp)
+  if(${MC_TCP_MSGS_FOUND})
+    set(MC_RTC_TCP_SRC ${MC_RTC_TCP_SRC} mc_rtc-tcp/MCControlTCPService.cpp)
+  else()
+    set(MC_RTC_TCP_SRC ${MC_RTC_TCP_SRC} mc_rtc-tcp/MCControlTCPService_dummy.cpp)
+  endif()
   add_executable(MCControlTCP ${MC_RTC_TCP_HEADERS} ${MC_RTC_TCP_SRC})
   target_link_libraries(MCControlTCP mc_rtc_ros mc_control)
   pkg_config_use_dependency(MCControlTCP tcp-control)
