--- a/doc/Doxyfile.extra.in
+++ b/doc/Doxyfile.extra.in
@@ -1,4 +1,9 @@
 INPUT                  = @CMAKE_SOURCE_DIR@/include
 IMAGE_PATH             = @CMAKE_SOURCE_DIR@/doc/pictures
 FILE_PATTERNS          = *.h *.idl
-
+TAGFILES = \
+"@SPACEVECALG_DOXYGENDOCDIR@/SpaceVecAlg.doxytag = @SPACEVECALG_DOXYGENDOCDIR@" \
+"@RBDYN_DOXYGENDOCDIR@/RBDyn.doxytag = @RBDYN_DOXYGENDOCDIR@" \
+"@SCH_CORE_DOXYGENDOCDIR@/sch-core.doxytag = @SCH_CORE_DOXYGENDOCDIR@"\
+"@TASKS_DOXYGENDOCDIR@/Tasks.doxytag = @TASKS_DOXYGENDOCDIR@" \
+"@MC_RBDYN_URDF_CPP_DOXYGENDOCDIR@/mc_rbdyn_urdf_cpp.doxytag = @MC_RBDYN_URDF_CPP_DOXYGENDOCDIR@"
