Publish both controlled and real robot from MCGlobalController

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -4,6 +4,8 @@
   "Enabled"   : ["XtionCalib"],
   //"Default"   : "Body6d",
   "Timestep" : 0.005,
+  "Publish"  : true,
+  "PublishTimestep" : 0.0033,
   "Seq" : {
     "Env" : {
       "Path" : "/home/gergondet/devel-src/catkin_ws/mc_ws/src/hrp2_drc/hrp2_drc_description",
