Add an option to deactivates some joints in the tcp module

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -1,6 +1,7 @@
 {
+  "MainRobot": "HRP4",
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP", "BCISelfInteract"],
-  "Enabled"   : ["Posture"],
+  "Enabled"   : ["XtionCalib"],
   //"Default"   : "Body6d",
   "Timestep" : 0.005,
   "Seq" : {
