Discard HRP2-specific xtion publishing, update config file

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -1,11 +1,11 @@
 {
-  "MainRobot": "HRP4",
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP", "BCISelfInteract"],
-  "Enabled"   : ["XtionCalib"],
+  "Enabled"   : ["Posture"],
   //"Default"   : "Body6d",
+  "PublishControlState" : true,
+  "PublishRealState" : true,
+  "PublishTimestep" : 0.01,
   "Timestep" : 0.005,
-  "Publish"  : true,
-  "PublishTimestep" : 0.0033,
   "Seq" : {
     "Env" : {
       "Path" : "/home/gergondet/devel-src/catkin_ws/mc_ws/src/hrp2_drc/hrp2_drc_description",
