--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -1,11 +1,36 @@
 {
+  // What robot is being controlled
+  "MainRobot" : "HRP2DRC",
+
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP", "BCISelfInteract"],
   "Enabled"   : ["Posture"],
+
+  // If multiple controllers are enable, default can be used to decide which
+  // will be enabled first, this defaults to the first controller enabled
   //"Default"   : "Body6d",
+
+  // Publish the state of the controlled robot (ROS)
   "PublishControlState" : true,
+
+  // Publish the state of the real robot (ROS)
   "PublishRealState" : true,
+
+  // Timestep of publication (ROS)
   "PublishTimestep" : 0.01,
+
+  // Controller timestep
   "Timestep" : 0.005,
+
+  // Set to true or false to enable/disable respectively
+  "Log" : true,
+
+  // LogDirectory dictates where the log files will be stored, defaults to system temp directory
+  // "LogDirectory" : "/tmp",
+
+  // The log file will have the name [LogTemplate]-[ControllerName]-[date].log
+  "LogTemplate" : "mc-control",
+
+  // The data belows regards the configuration of the Seq controller
   "Seq" : {
     "Env" : {
       "Path" : "/home/gergondet/devel-src/catkin_ws/mc_ws/src/hrp2_drc/hrp2_drc_description",
