--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -3,7 +3,7 @@
   "MainRobot" : "HRP2DRC",
 
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP", "BCISelfInteract"],
-  "Enabled"   : ["Posture"],
+  "Enabled"   : ["Seq"],
 
   // If multiple controllers are enable, default can be used to decide which
   // will be enabled first, this defaults to the first controller enabled
@@ -51,6 +51,6 @@
     //"Plan" : "drc_car_egress.json",
     "UseRealSensors" : 1,
     "StartStance" : 0,
-    "StepByStep"  : 1
+    "StepByStep"  : 0
   }
 }
