--- a/data/drc_stairs_climbing_config.json
+++ b/data/drc_stairs_climbing_config.json
@@ -8,8 +8,8 @@
             "velThresh" : 0.0001
          },
          "comTask" : {
-            "extraStiffness" : 5.0,
-            "stiffness" : 2.0,
+            "extraStiffness" : 4.0,
+            "stiffness" : 4.0,
             "targetSpeed" : 0.003,
             "weight" : 400.0
          },
@@ -43,7 +43,10 @@
             "adjustVelThresh" : 0,
             "posThresh" : 0.03,
             "preContactDist" : 0.05,
-            "velThresh" : 0.03
+            "velThresh" : 0.03,
+            "useComplianceTask" : true,
+            "complianceVelThresh" : 0.005,
+            "complianceTargetForce" : [ 0, 0, 100]
          },
          "contactTask" : {
             "collisionConf" : {
@@ -62,8 +65,8 @@
                "weight" : 200.0
             },
             "position" : {
-               "extraStiffness" : 12.0,
-               "stiffness" : 5.0,
+               "extraStiffness" : 6.0,
+               "stiffness" : 2.0,
                "targetSpeed" : 0.01,
                "weight" : 300.0
             },
@@ -105,7 +108,7 @@
             "posThresh" : 0.030,
             "preContactDist" : 0.020,
             "velThresh" : 0.030,
-            "gripperMoveAwayDist" : 0.02
+            "gripperMoveAwayDist" : 0.0
          },
          "contactTask" : {
             "collisionConf" : {
@@ -339,15 +342,62 @@
            "preContactDist" : 0.09
          },
          "comObj" : {
-            "comOffset" : [ 0.05, 0.0, -0.0 ]
+            "comOffset" : [ 0.0, 0.0, -0.0 ]
          }
+      },
+      {
+        "type" : "add",
+        "r1Surface" : "LFrontSole",
+        "r2Surface" : "StairStep1",
+        "contactObj" : {
+          "adjustOffset" : [ 0.0, 0.05, 0.0 ],
+          "adjustRPYOffset" : [ 0.0, 0.0, 0.0 ]
+        }
+      },
+      {
+        "type" : "remove",
+        "r1Surface" : "RFullSole",
+        "r2Surface" : "Ground",
+        "comObj" : {
+           "comOffset" : [ 0.025, 0.025, 0.05 ]
+        }
+      },
+      {
+        "type" : "add",
+        "r1Surface" : "RFrontSole",
+        "r2Surface" : "StairStep1",
+        "comObj" : {
+           "comOffset" : [ 0.05, 0.025, 0.0 ],
+           "comAdjustOffset" : [ 0.025, 0., 0.0 ]
+        },
+        "contactObj" : {
+          "adjustOffset" : [ 0.0, -0.025, 0.0 ],
+          "adjustRPYOffset" : [ 0.0, 0.0, 0.0 ]
+        },
+        "contactTask" : {
+          "waypointConf" : {
+            "conf" : {
+               "x" : 0.10,
+               "y" : 1.0,
+               "z" : 0.90,
+               "nOff" : 0.20,
+               "yOff" : -0.05
+            },
+            "thresh" : 0.150,
+            "type" : "percentWaypoint"
+          }
+        }
       },
       {
         "type" : "remove",
         "r1Surface" : "LFrontSole",
         "r2Surface" : "StairStep1",
         "comObj" : {
-           "comOffset" : [ 0.0, -0.05, -0.0 ]
+           "comOffset" : [ -0.025, -0.025, -0.05 ]
+        },
+        "postureTask" : {
+           "stiffness" : 1,
+           "weight" : 10000.0
         }
       },
       {
@@ -355,21 +405,79 @@
         "r1Surface" : "LFrontSole",
         "r2Surface" : "StairStep2",
         "comObj" : {
-           "comOffset" : [ 0.25, 0.0, -0.0 ]
+           "comOffset" : [ 0.075, 0.0, 0. ],
+           "comAdjustOffset" : [ 0.075, 0.0, 0.0 ]
         },
         "comTask" : {
            "extraStiffness" : 0.0,
-           "stiffness" : 1.0,
+           "stiffness" : 10.0,
            "targetSpeed" : 0.006,
            "weight" : 500.0
         },
+        "contactObj" : {
+          "adjustOffset" : [ 0.0, 0.1, 0.0 ],
+          "adjustRPYOffset" : [ 0.0, 0.0, 0.0 ]
+        },
         "contactTask" : {
+            "position" : {
+               "extraStiffness" : 12.0,
+               "stiffness" : 6.0,
+               "targetSpeed" : 0.01,
+               "weight" : 300.0
+            },
            "waypointConf" : {
               "conf" : {
-                 "x" : -0.05,
+                 "x" : 0.0,
                  "y" : 1.0,
                  "z" : 0.9,
-                 "nOff" : 0.2
+                 "nOff" : 0.2,
+                 "yOff" : 0.05
+              },
+              "thresh" : 0.15,
+              "type" : "percentWaypoint"
+           }
+        }
+      },
+      {
+        "type" : "remove",
+        "r1Surface" : "RFrontSole",
+        "r2Surface" : "StairStep1",
+        "comObj" : {
+           "comOffset" : [ 0.025, 0.0, 0.0 ]
+        }
+      },
+      {
+        "type" : "add",
+        "r1Surface" : "RFrontSole",
+        "r2Surface" : "StairStep2",
+        "comObj" : {
+           "comOffset" : [ 0.05, 0.0, 0.0 ],
+           "comAdjustOffset" : [ 0.0, 0.0, 0.0 ]
+        },
+        "comTask" : {
+           "extraStiffness" : 5.0,
+           "stiffness" : 5.0,
+           "targetSpeed" : 0.006,
+           "weight" : 500.0
+        },
+        "contactObj" : {
+          "adjustOffset" : [ 0.0, 0.0, 0.0 ],
+          "adjustRPYOffset" : [ 0.0, 0.0, 0.0 ]
+        },
+        "contactTask" : {
+            "position" : {
+               "extraStiffness" : 6.0,
+               "stiffness" : 2.0,
+               "targetSpeed" : 0.01,
+               "weight" : 300.0
+            },
+           "waypointConf" : {
+              "conf" : {
+                 "x" : 0.10,
+                 "y" : 1.0,
+                 "z" : 0.9,
+                 "nOff" : 0.2,
+                 "yOff" : -0.05
               },
               "thresh" : 0.15,
               "type" : "percentWaypoint"
@@ -380,10 +488,32 @@
         "type" : "add",
         "r1Surface" : "RightFingers",
         "r2Surface" : "Platform",
+        "contactObj" : {
+           "posThresh" : 0.03,
+           "preContactDist" : 0.1,
+           "velThresh" : 0.03,
+           "useComplianceTask" : true,
+           "complianceVelThresh" : 0.005,
+           "complianceTargetForce" : [ 0, 0, 30]
+        },
         "contactTask" : {
+          "position" : {
+             "targetSpeed" : 0.001
+          },
           "waypointConf" : {
              "skip" : 1
           }
+        },
+        "comObj" : {
+           "comOffset" : [ -0.02, 0.0, 0.0 ]
+        }
+      },
+      {
+        "type" : "remove",
+        "r1Surface" : "LeftGripper",
+        "r2Surface" : "StairLeftRung1",
+        "comObj" : {
+           "comOffset" : [ 0.0, -0.05, -0.05 ]
         }
       },
       {
@@ -395,9 +525,35 @@
               "skip" : 1
            }
          },
+         "contactObj" : {
+           "preContactDist" : 0,
+           "adjustOffset" : [-0.03, 0., -0.024]
+         },
+         "comTask" : {
+            "extraStiffness" : 1.0,
+            "stiffness" : 5.0,
+            "targetSpeed" : 0.00050,
+            "weight" : 500.0
+         },
          "comObj" : {
-            "comOffset" : [ 0.0, 0.0, 0.0 ]
+            "comOffset" : [ 0.025, -0.05, -0.05 ]
          }
+      },
+      {
+        "type" : "remove",
+        "r1Surface" : "LFrontSole",
+        "r2Surface" : "StairStep2",
+        "comObj" : {
+           "comOffset" : [ 0.0, 0.1, 0.0 ]
+        }
+      },
+      {
+        "type" : "remove",
+        "r1Surface" : "RFrontSole",
+        "r2Surface" : "StairStep2",
+        "comObj" : {
+           "comOffset" : [ -0.05, 0., 0.0 ]
+        }
       }
    ]
 }
