--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,9 @@
 variables:
   CI_TOOL: gitlab-ci
-  APT_DEPENDENCIES: "libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev qhull-bin libqhull-dev libltdl-dev libspacevecalg-dev libeigen-qld-dev"
-  GIT_DEPENDENCIES: "git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/sch-core jrl-umi3218/RBDyn jrl-umi3218/Tasks git@gite.lirmm.fr:multi-contact/mc_rbdyn_urdf_cpp.git"
-  MASTER_PPA: "v-launchpad-jochen-sprickerhof-de/pcl pierre-gergondet+ppa/multi-contact hrg/daily"
+  APT_DEPENDENCIES: "libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev qhull-bin libqhull-dev libltdl-dev libspacevecalg-dev libeigen-qld-dev librbdyn-dev libsch-core-dev"
+  GIT_DEPENDENCIES: "git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/Tasks git@gite.lirmm.fr:multi-contact/mc_rbdyn_urdf_cpp.git"
+  GITE_PACKAGES: "multi-contact/eigen-lssol multi-contact/tasks-packaging#topic/CIPackaging multi-contact/mc_rbdyn_urdf_cpp"
+  MASTER_PPA: "v-launchpad-jochen-sprickerhof-de/pcl pierre-gergondet+ppa/multi-contact-unstable hrg/daily"
   ROS_DISTRO: "indigo"
 
 # Secured variable are stored in the project
@@ -16,19 +17,19 @@ before_script:
   - git submodule update --quiet --init --recursive
   - ./.jrl-ci/dependencies/eigen-3.2
 
-build_debian:
-  stage: build
-  script:
-    - export APT_DEPENDENCIES="libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev qhull-bin libqhull-dev libltdl-dev"
-    - export GIT_DEPENDENCIES="jrl-umi3218/SpaceVecAlg jrl-umi3218/eigen-qld git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/sch-core jrl-umi3218/RBDyn jrl-umi3218/Tasks git@gite.lirmm.fr:multi-contact/mc_rbdyn_urdf_cpp.git"
-    - export MASTER_PPA=""
-    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#master git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
-    - mkdir -p /tmp/_ci/catkin_dep_ws/src
-    - ./.jrl-ci/run before_install
-    - ./.jrl-ci/run build
-    - ./.jrl-ci/run after_success
-  tags:
-    - debian
+#build_debian:
+#  stage: build
+#  script:
+#    - export APT_DEPENDENCIES="libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev qhull-bin libqhull-dev libltdl-dev"
+#    - export GIT_DEPENDENCIES="jrl-umi3218/SpaceVecAlg jrl-umi3218/eigen-qld git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/sch-core jrl-umi3218/RBDyn jrl-umi3218/Tasks git@gite.lirmm.fr:multi-contact/mc_rbdyn_urdf_cpp.git"
+#    - export MASTER_PPA=""
+#    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#master git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
+#    - mkdir -p /tmp/_ci/catkin_dep_ws/src
+#    - ./.jrl-ci/run before_install
+#    - ./.jrl-ci/run build
+#    - ./.jrl-ci/run after_success
+#  tags:
+#    - debian
 
 build_gcc_noros_nohrpsys:
   stage: build
@@ -41,54 +42,69 @@ build_gcc_noros_nohrpsys:
   tags:
     - GCC
 
-build_gcc_noros_hrpsys:
-  stage: build
-  script:
-    - echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
-    - apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
-    - ./.jrl-ci/run before_install
-    - export MASTER_PPA=""
-    - export APT_DEPENDENCIES="hrpsys-base liblapack-dev libblas-dev libjpeg-dev libpng12-dev"
-    - export GIT_DEPENDENCIES=""
-    - ./.jrl-ci/run before_install
-    - ./.jrl-ci/run build
-    - ./.jrl-ci/run after_success
-  tags:
-    - GCC
+#build_gcc_noros_hrpsys:
+#  stage: build
+#  script:
+#    - echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
+#    - apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
+#    - ./.jrl-ci/run before_install
+#    - export MASTER_PPA=""
+#    - export APT_DEPENDENCIES="hrpsys-base liblapack-dev libblas-dev libjpeg-dev libpng12-dev"
+#    - export GIT_DEPENDENCIES=""
+#    - ./.jrl-ci/run before_install
+#    - ./.jrl-ci/run build
+#    - ./.jrl-ci/run after_success
+#  tags:
+#    - GCC
+#
+#build_gcc_ros_nohrpsys:
+#  stage: build
+#  script:
+#    - echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
+#    - apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
+#    - ./.jrl-ci/run before_install
+#    - ./.jrl-ci/dependencies/catkin
+#    - export MASTER_PPA=""
+#    - export APT_DEPENDENCIES="ros-indigo-common-msgs ros-indigo-tf2-ros ros-indigo-xacro ros-indigo-rviz-animated-view-controller"
+#    - export GIT_DEPENDENCIES=""
+#    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#master git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
+#    - ./.jrl-ci/run before_install
+#    - ./.jrl-ci/run build
+#    - ./.jrl-ci/run after_success
+#  tags:
+#    - GCC
+#
+#build_gcc_ros_hrpsys:
+#  stage: build
+#  script:
+#    - echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
+#    - apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
+#    - ./.jrl-ci/run before_install
+#    - ./.jrl-ci/dependencies/catkin
+#    - export MASTER_PPA=""
+#    - export APT_DEPENDENCIES="ros-indigo-common-msgs ros-indigo-tf2-ros ros-indigo-xacro ros-indigo-rviz-animated-view-controller hrpsys-base liblapack-dev libblas-dev"
+#    - export GIT_DEPENDENCIES=""
+#    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#master git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
+#    - ./.jrl-ci/run before_install
+#    - ./.jrl-ci/run build
+#    - ./.jrl-ci/run after_success
+#  tags:
+#    - GCC
 
-build_gcc_ros_nohrpsys:
-  stage: build
+package_trusty_amd64:
+  stage: package
+  before_script:
+    - git submodule update --quiet --init --recursive
+    - ./.packaging/setup_pbuilder.sh trusty amd64
   script:
-    - echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
-    - apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
-    - ./.jrl-ci/run before_install
-    - ./.jrl-ci/dependencies/catkin
-    - export MASTER_PPA=""
-    - export APT_DEPENDENCIES="ros-indigo-common-msgs ros-indigo-tf2-ros ros-indigo-xacro ros-indigo-rviz-animated-view-controller"
-    - export GIT_DEPENDENCIES=""
-    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#master git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
-    - ./.jrl-ci/run before_install
-    - ./.jrl-ci/run build
-    - ./.jrl-ci/run after_success
-  tags:
-    - GCC
-
-build_gcc_ros_hrpsys:
-  stage: build
-  script:
-    - echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
-    - apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
-    - ./.jrl-ci/run before_install
-    - ./.jrl-ci/dependencies/catkin
-    - export MASTER_PPA=""
-    - export APT_DEPENDENCIES="ros-indigo-common-msgs ros-indigo-tf2-ros ros-indigo-xacro ros-indigo-rviz-animated-view-controller hrpsys-base liblapack-dev libblas-dev"
-    - export GIT_DEPENDENCIES=""
-    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#master git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
-    - ./.jrl-ci/run before_install
-    - ./.jrl-ci/run build
-    - ./.jrl-ci/run after_success
+    - ./.packaging/build_recipe.sh .mc-rtc.recipe trusty amd64
+  artifacts:
+    name: "tasks_trusty_amd64"
+    paths:
+      - "*.deb"
   tags:
     - GCC
 
 stages:
   - build
+  - package
