--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".jrl-ci"]
 	path = .jrl-ci
 	url = https://github.com/gergondet/jrl-travis.git
+[submodule ".packaging"]
+	path = .packaging
+	url = git@gite.lirmm.fr:idh/gitlab-ci-packaging
